syntax = "proto3";

package book;

option go_package = "./pb";


// Created_at, Updated_at, Deleted_at is Timestamp
message Book{
    uint32 id = 1;
    string created_at = 2;
    string updated_at = 3;
    string deleted_at = 4;
    string title = 5;
    string description = 6;
    uint32 quantity = 7;
    string cover = 8;
    uint32 author_id = 9;
}

message BooksReq{
}

message BooksRes{
    repeated Book books = 1;
}

service BookService{
    rpc GetAllBook(BooksReq) returns (BooksRes);
}

